Fix #1315 & #1636: removing overflow in .auth0-lock-content-wrapper

--- a/css/index.styl
+++ b/css/index.styl
@@ -180,7 +180,6 @@ loadingSize = 30px
     flex-grow: 1
     flex-shrink: 1
     flex-basis: auto;
-    overflow: auto;
     -webkit-overflow-scrolling touch;
 
   .auth0-lock-close-button, .auth0-lock-back-button
